@@ -14,6 +14,7 @@ do_src:
 	cd src; $(MAKE)
 
 test: build
+	test/check_delete_calls.sh
 	@rm -f tmp_valgrind.out
 	$(VALGRIND) ./$(BIN) -WW@U
 	@if [ -s tmp_valgrind.out ]; then cat tmp_valgrind.out; false; fi
@@ -44,7 +45,7 @@ uninstall:
 	rm -rf $(PREFIX)/share/doc/gxemul
 
 clean:
-	rm -f $(BIN) *core core.* *.gmon _* *.exe ktrace.out tmp_valgrind.out
+	rm -f $(BIN) *core core.* *.gmon _* *.exe ktrace.out tmp_*.out
 	rm -f unittest*.h components*.h commands*.h
 	rm -rf doc/doxygen
 	cd src; $(MAKE) clean
